--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,11 +1,11 @@
 <!doctype html>
 <head>
-<title>{% block title %}Welcome{% endblock %} | Flask OAuth Example</title>
+<title></title>
 <link rel=stylesheet type=text/css href="{{ url_for('static',
   filename='style.css') }}">
 </head>
 <body>
-<h1>Flask OAuth Example</h1>
+
 
 {% for message in get_flashed_messages() %}
   <p class=message>{{ message }}</p>
