--- a/templates/tweets.html
+++ b/templates/tweets.html
@@ -11,7 +11,15 @@
         }}">{{ tweet.user.screen_name }}</a>: {{ tweet.text|urlize }}</li>
       
       <li>{{ tweet._json['coordinates'].get('coordinates') }}</li><br>
+      {% if tweet._json['entities'].get('media')[0] %}
+      <li>{{ tweet._json['entities'].get('media')[0].get('media_url') }}</li>
       {% endif %}
+    {% else %}
+      <li><a href="http://twitter.com/{{ tweet.user.screen_name
+        }}">{{ tweet.user.screen_name }}</a>: {{ tweet.text|urlize }}</li>
+      
+      <li>{{ tweet._json['coordinates'] }}</li><br>
+    {% endif %}
     {% endfor %}
     </ul>
     {% endif %}
