--- a/templates/index.html
+++ b/templates/index.html
@@ -10,6 +10,11 @@
 		  body { margin:0; padding:0; }
 		  #map { position:absolute; top:0; bottom:0; width:100%; }
 		</style>
+		<style>
+			.leaflet-popup-content img {
+			  max-width:100%;
+			  }
+		</style>
 	</head>
 
 	<body>
